Bug 1660774 - Masks shouldn't be suppressed for print. r=jwatt, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D88899